--- a/Stock Management Program/nbproject/project.properties
+++ b/Stock Management Program/nbproject/project.properties
@@ -35,17 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Stock_Management
 endorsed.classpath=
 excludes=
-file.reference.rs2xml.jar=/Users/mee/Downloads/rs2xml.jar
-file.reference.rs2xml.jar-1=/Users/mee/Desktop/jar/rs2xml.jar
-file.reference.sqlite-jdbc-3.40.0.0.jar=/Users/mee/Downloads/sqlite-jdbc-3.40.0.0.jar
-file.reference.sqlite-jdbc-3.40.0.0.jar-1=/Users/mee/Desktop/jar/sqlite-jdbc-3.40.0.0.jar
+file.reference.rs2xml.jar=../JarLibrares/rs2xml.jar
+file.reference.sqlite-jdbc-3.40.0.0.jar=../JarLibrares/sqlite-jdbc-3.40.0.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.40.0.0.jar}:\
     ${file.reference.rs2xml.jar}:\
-    ${file.reference.rs2xml.jar-1}:\
-    ${file.reference.sqlite-jdbc-3.40.0.0.jar-1}
+    ${file.reference.sqlite-jdbc-3.40.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
